--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
     commands:
       # Discover and run unit tests. For more information, see <https://docs.pytest.org/en/latest/goodpractices.html>
       - python setup.py pytest
+      - pip install python-taint
       - python -m pyt helloworld/application.py
 
       # Do not remove this statement. This command is required for AWS CodeStar projects.
